# django-second

./: README.md  celery-manual.txt  csv_work.py  main.py  manage_db.py  pyproject.toml
it_shop/: j2.py  manage.py
it_shop/cart/: cart.py  forms.py  urls.py  views.py
it_shop/coupons/: admin.py  forms.py  models.py  urls.py  views.py
it_shop/coupons/migrations/: 0001_initial.py
it_shop/it_shop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
it_shop/it_shop/shop/: admin.py  models.py  urls.py  views.py
it_shop/lapi/: admin.py  apps.py  models.py  urls.py  views.py
it_shop/lapi/migrations/: 0001_initial.py  0002_lapi_background_lapi_style_alter_lapi_map.py
it_shop/my_auth/: admin.py  apps.py  form_validators.py  forms.py  manager.py  models.py  old_wiew.py  urls.py  views.py
it_shop/my_auth/migrations/: 0001_initial.py  0002_alter_myuser_photo.py  0003_rename_photo_myuser_foto.py  0004_sex_alter_myuser_city.py  0005_alter_myuser_sex.py  0006_alter_myuser_city_alter_myuser_foto_alter_myuser_sex.py  0007_alter_myuser_sex.py  0008_alter_myuser_sex.py  0009_alter_myuser_sex.py  0010_alter_myuser_sex.py  0011_alter_myuser_sex.py  0012_alter_myuser_slug.py  0013_alter_myuser_slug.py  0014_alter_myuser_options_remove_myuser_foto_myuser_phone_and_more.py  0015_alter_myuser_managers.py
it_shop/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
it_shop/tank/: admin.py  apps.py  models.py  urls.py  views.py
lapi-generator/: ceil.py  level_1.txt  level_2.py  level_2.txt  level_3.txt  main.py  map.txt  test.txt
parsing/: parser.py
(+86 files in other folders)
